Fix mobile user agent string not being used when PlzNavigate is enabled.

The user agent override string should only have been used when the NavigationEntry has the flag set.

BUG=705218
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2777813003
Cr-Commit-Position: refs/heads/master@{#459895}

Former-commit-id: d83b035e1cb466ff77c52973fe633fe780833325